--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Rohan",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.19.3"
   }
 }
